--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,11 @@
-controllers:
-    resource: ../src/Controller/
-    type: annotation
+index:
+    path: /
+    controller: App\Controller\IndexController::index
 
-kernel:
-    resource: ../src/Kernel.php
-    type: annotation
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing-sf4.xml"
+
+sg_datatables_bundle:
+    resource: "@SgDatatablesBundle/Controller/"
+    type:     annotation
+    prefix:   /sg
