--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,19 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    # controllers are imported separately to make sure services can be injected
+    # as action arguments even if you don't extend any base controller class
+    App\Controller\:
+        resource: '../src/Controller/'
+        tags: ['controller.service_arguments']
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+        # Service for DatatablesBundle compatibility
+    Sg\DatatablesBundle\Datatable\DatatableFactory:
+        alias: sg_datatables.factory
+    Sg\DatatablesBundle\Response\DatatableResponse:
+        alias: sg_datatables.response
+    Sg\DatatablesBundle\Controller\DatatableController:
+        calls: [['setContainer', ['@Psr\Container\ContainerInterface']]]
