--- a/composer.json
+++ b/composer.json
@@ -11,20 +11,21 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "friendsofsymfony/jsrouting-bundle": "^3.1",
-        "sensio/framework-extra-bundle": "^5.6",
+        "sensio/framework-extra-bundle": "^6.2",
         "sg/datatablesbundle": "^1.2",
-        "symfony/console": "^5.3",
-        "symfony/dotenv": "^5.3",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
         "symfony/flex": "^2",
         "symfony/form": "5.*",
-        "symfony/framework-bundle": "^5.3",
+        "symfony/framework-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.37",
-        "symfony/proxy-manager-bridge": "^5.3",
-        "symfony/runtime": "^5.3",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.*",
-        "symfony/twig-bundle": "^5.3",
+        "symfony/twig-bundle": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.14",
-        "symfony/yaml": "^5.3",
+        "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -79,5 +80,10 @@
             "require": "5.*",
             "docker": false
         }
+    },
+    "require-dev": {
+        "symfony/debug-bundle": "5.*",
+        "symfony/stopwatch": "5.*",
+        "symfony/web-profiler-bundle": "5.*"
     }
 }
