--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
         "@popperjs/core": "^2.11.2",
         "autoprefixer": "^10.4.2",
         "bootstrap": "^5.1.3",
+        "datatables.net-bs5": "^1.11.4",
+        "jquery": "^3.6.0",
         "node-sass": "^7.0.1",
+        "popper": "^1.0.1",
         "postcss-loader": "^6.2.1",
         "sass": "^1.49.8"
     }
