--- a/site1/.env
+++ b/site1/.env
@@ -5,10 +5,11 @@ APP_NAME=my-app
 VIRTUAL_HOST=yoursite.ldt
 VIRTUAL_PORT=80
 LETSENCRYPT_HOST=yoursite.ldt
-LETSENCRYPT_EMAIL=imail@yoursite.ldt
+LETSENCRYPT_EMAIL=mail@yoursite.ldt
 
 ## SQL
-#DB_NAME=DB_NAME
-#USER_NAME=USER_NAME
-#DB_PASSWORD=DB_PASSWORD
-#DB_ROOT_PASSWORD=DB_ROOT_PASSWORD
+DB_NAME=DB_NAME
+USER_NAME=USER_NAME
+DB_PASSWORD=DB_PASSWORD
+DB_PORT=3306
+DB_ROOT_PASSWORD=DB_ROOT_PASSWORD
