add DB_URL in .env add # for auth_basic

--- a/site1/.env
+++ b/site1/.env
@@ -8,8 +8,9 @@ LETSENCRYPT_HOST=yoursite.ldt
 LETSENCRYPT_EMAIL=mail@yoursite.ldt
 
 ## SQL
-DB_NAME=DB_NAME
-USER_NAME=USER_NAME
-DB_PASSWORD=DB_PASSWORD
+DB_URL=URL1
+DB_NAME=DB_NAME1
+USER_NAME=USER_NAME1
+DB_PASSWORD=DB_PASSWORD1
 DB_PORT=3306
-DB_ROOT_PASSWORD=DB_ROOT_PASSWORD
+DB_ROOT_PASSWORD=DB_ROOT_PASSWORD1
