--- a/site1/nginx/default.conf
+++ b/site1/nginx/default.conf
@@ -11,8 +11,8 @@ server {
     proxy_connect_timeout 300;
     proxy_send_timeout 300; 
 
-    auth_basic "Private";
-    auth_basic_user_file /etc/nginx/.htpasswd;
+    #auth_basic "Private";
+    #auth_basic_user_file /etc/nginx/.htpasswd;
 
     location / {
         try_files $uri /index.php$is_args$args;
@@ -27,7 +27,7 @@ server {
         fastcgi_param DOCUMENT_ROOT $realpath_root;
 
         fastcgi_read_timeout 180;
-	fastcgi_buffer_size 128k;
+	    fastcgi_buffer_size 128k;
         fastcgi_buffers 4 256k;
         fastcgi_busy_buffers_size 256k;
 
