--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ APP_SECRET=be5622e422a5758006cbf7cb915a84a8
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
-DATABASE_URL=mysql://ebm01:3bmP4ssw0rd@127.0.0.1/sebExpo?serverVersion=mariadb-10.6.5
+DATABASE_URL=mysql://seb:Memorex@@127.0.0.1/sebExpo?serverVersion=mariadb-10.6.5
 ###< doctrine/doctrine-bundle ###
