--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "friendsofsymfony/jsrouting-bundle": "^3.1",
+        "omines/datatables-bundle": "^0.7.2",
         "sensio/framework-extra-bundle": "^6.2",
         "sg/datatablesbundle": "^1.2",
+        "symfony/asset": "5.*",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^2",
@@ -23,8 +25,8 @@
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.*",
+        "symfony/translation": "5.*",
         "symfony/twig-bundle": "5.4.*",
-        "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "5.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -76,7 +78,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.*",
             "docker": false
         }
