--- a/config/packages/datatables.yaml
+++ b/config/packages/datatables.yaml
@@ -2,9 +2,12 @@
 datatables:
     # Set options, as documented at https://datatables.net/reference/option/
     options:
-        lengthMenu : [10, 25, 50, 100, 250, 500, 1000, 2500]
-        pageLength: 50
+        lengthMenu : [10, 25, 50, 100]
+        pageLength: 10
         dom: "<'row' <'col-sm-12' tr>><'row' <'col-sm-6'l><'col-sm-6 text-right'pi>>"
+
+    # Where to persist the current table state automatically
+    persist_state:        query # One of "none"; "query"; "fragment"; "local"; "session"
 
     template_parameters:
         # Example classes to integrate nicely with Bootstrap 3.x
